fix align treeview

--- a/src/modules/hero/index.css
+++ b/src/modules/hero/index.css
@@ -29,7 +29,7 @@
   @extend .u-md-size6of12;
   @extend .u-md-before2of12;
 
-  @extend .u-lg-size4of12;
+  @extend .u-lg-size5of12;
   @extend .u-lg-before1of8;
 
   opacity: 0.95;
